<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Who Goes First</string>

    <!-- "More" dialog -->
    <string name="action_more">More</string>
    <string name="more_title">How Many People?</string>
    <string name="hint_more_players">Number of players</string>
    <string name="template_invalid_number_players">"%d" is not a valid number of people</string>

    <!-- Player picker fragment -->
    <string name="player_count_inquiry">How many people are there?</string>
    <!-- Should be the subsection of player_count_inquiry that we want to highlight -->
    <string name="player_count_inquiry_highlight">How many</string>

    <!-- Numbers on pickers -->
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>

    <!-- Who goes first fragment -->
    <string name="you_go_first_duh">You go first.  Duh.</string>
    <string name="you_go_first">You go first.</string>
    <string name="you_go_first_highlight">You</string>
    <string name="other_player_goes_first">The other person goes first.</string>
    <string name="other_player_goes_first_highlight">other person</string>
    <string name="player_directly_left">The person on your left goes first.</string>
    <string name="player_directly_left_highlight">on your left</string>
    <string name="player_to_left_TEMPLATE">The person %s to your left goes first.</string>
    <string name="player_to_left_highlight_TEMPLATE">%s to your left</string>
    <string name="player_directly_right">The person on your right goes first.</string>
    <string name="player_directly_right_highlight">on your right</string>
    <string name="player_to_right_TEMPLATE">The person %s to your right goes first.</string>
    <string name="player_to_right_highlight_TEMPLATE">%s to your right</string>

    <!-- Some nicely localized strings for common distances away -->
    <string name="two_full">two</string>
    <string name="three_full">three</string>
    <string name="four_full">four</string>
    <string name="five_full">five</string>
    <string name="six_full">six</string>

    <!-- For the multiplier inside the ArrowView -->
    <string name="multiplier_TEMPLATE">X%1$d</string>

</resources>